--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     Perusahaan kami mendoakan Anda banyak keuntungan 💖💖💖
   </p>
 
-  <img src="https://raw.githubusercontent.com/yzcoding-YZ/ab/main/slot.jpg" alt="Slot Image">
+  <img src="https://raw.githubusercontent.com/yzcoding-YZ/ab/main/slot.jpg" alt="Slot Image"><br><br>
 
   <a href="https://99slotsri.s3.ap-southeast-2.amazonaws.com/nine_game_a9907_AD_TI_2.10.14.2.6.apk">
     Download 【Slots Ri】
